--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,10 @@
 }
 
 /* General styles */
+/* Making root color for header and footer to change easier */
+:root {
+    --background: #fafafa;
+}
 
 body {
     min-height: 100vh;
@@ -25,3 +29,59 @@ h1 {
     color: #030202;
 }
 
+/* Header */
+header {
+    background-color: var(--background);
+    position: fixed;
+    z-index: 99;
+    width: 100%;
+    justify-content: space-between;
+    align-items: baseline;
+
+}
+
+header a {
+    text-decoration: none;
+    color: inherit;
+}
+
+/* Styling the dropdown menu for the nav bar*/
+
+nav {
+    position: absolute;
+    text-align: right;
+    top: 100%;
+    right: 0;
+    background-color: var(--background);
+    width: 100%;
+    display: none;
+}
+
+#nav-bar:checked~nav {
+    display: block;
+}
+
+#nav-bar {
+    display: none;
+}
+
+.nav-toggle-label {
+    position: absolute;
+    right: 2rem;
+    top: 0;
+    height: 100%;
+    display: flex;
+    align-items: center;
+}
+
+#menu {
+    list-style-type: none;
+    font-size: 125%;
+    margin: 0;
+    padding: 0;
+}
+
+#menu li {
+    margin-bottom: .4rem;
+    margin-right: .8rem;
+}
