--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,18 +25,22 @@ body {
 
 h1 {
     font-family: 'Martian Mono';
-    font-size: 1.5rem;
+    font-size: 2.2rem;
     color: #030202;
+   /* padding: .5rem .5rem; */
 }
 
 /* Header */
 header {
     background-color: var(--background);
+    padding: .5rem 1rem;
     position: fixed;
     z-index: 99;
     width: 100%;
-    justify-content: space-between;
     align-items: baseline;
+    justify-content: space-between;
+    display: flex;
+
 
 }
 
@@ -45,18 +49,30 @@ header a {
     color: inherit;
 }
 
+#menu {
+    list-style-type: none;
+    font-size: 140%;
+    margin: 0;
+    padding: 0;
+}
+
+#menu>li {
+    margin-bottom: .4rem;
+    margin-right: .8rem;
+}
+
 /* Styling the dropdown menu for the nav bar*/
 
 nav {
     position: absolute;
-    text-align: right;
-    top: 100%;
-    right: 0;
     background-color: var(--background);
     width: 100%;
+    left: 0;
+    top: 100%;
+    padding: 0 1rem;
     display: none;
 }
-
+/* Nav toggle */
 #nav-bar:checked~nav {
     display: block;
 }
@@ -66,22 +82,7 @@ nav {
 }
 
 .nav-toggle-label {
-    position: absolute;
-    right: 2rem;
-    top: 0;
-    height: 100%;
-    display: flex;
-    align-items: center;
+     font-size: 2rem;
+     margin-right: 1.5rem;
 }
 
-#menu {
-    list-style-type: none;
-    font-size: 125%;
-    margin: 0;
-    padding: 0;
-}
-
-#menu li {
-    margin-bottom: .4rem;
-    margin-right: .8rem;
-}
