--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -40,8 +40,6 @@ header {
     align-items: baseline;
     justify-content: space-between;
     display: flex;
-
-
 }
 
 header a {
@@ -59,6 +57,10 @@ header a {
 #menu>li {
     margin-bottom: .4rem;
     margin-right: .8rem;
+}
+
+.active {
+    border-bottom: 1px solid #030202;
 }
 
 /* Styling the dropdown menu for the nav bar*/
@@ -113,7 +115,7 @@ main {
         display: flex;
     }
 
-/* Make some space between */
+    /* Make some space between */
     #menu>li {
         padding-left: 1.5rem;
     }
@@ -123,16 +125,16 @@ main {
     }
 
     /* Make the logo bigger */
-#logo {
-    font-size: 250%;
-    line-height: 5rem;
-    margin: 0 1rem;
-}
+    #logo {
+        font-size: 250%;
+        line-height: 5rem;
+        margin: 0 1rem;
+    }
 
-/* Main content */
+    /* Main content */
 
-/* Push the main content underneath the header */
-main {
-    margin-top: 6rem;
-}
+    /* Push the main content underneath the header */
+    main {
+        margin-top: 6rem;
+    }
 }
