--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -117,6 +117,32 @@ main {
     margin-top: 3.4rem;
 }
 
+/* To position divs inside the section */
+#landing-page {
+    position: relative;
+}
+
+/* Styling hero image for mobile phones */
+#hero-img {
+    height: 20rem;
+    width: 100%;
+    /*border-bottom: 1rem solid #fafafa;*/
+    background: url("../images/hero.png") no-repeat top 45% left -24%/cover;
+    background-size: 200%;
+}
+
+#quote {
+    position: absolute;
+    max-height: 8rem;
+    min-width: 12rem;
+    padding: .6rem;
+    border-radius: 3px;
+    background-color: rgba(255, 255, 255, .8);
+    font-size: 110%;
+    text-align: center;
+    top: 60%;
+}
+
 
 /* Footer */
 #social-media {
