make the article in 2 columns tom make the reading easy on laptops

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,11 @@ footer {
         padding: 2rem;
     }
 
+    /* Making the text in 2 columns to make the reading easier */
+    .nutrition-info article {
+        columns: 2 250px;
+    }
+
     /* Footer */
     #social-media {
         padding-left: 70%;
