--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,6 +34,10 @@ h1 {
     display: none;
 }
 
+#intro>h2 {
+    display: none;
+}
+
 /* Header */
 header {
     background-color: var(--background);
