--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -270,6 +270,11 @@ th {
     text-align: left;
 }
 
+/* Make every other line lighter */
+tr:nth-of-type(2n) {
+    background-color: rgba(255, 255, 255, .5);
+}
+
 /* Footer */
 footer {
     position: fixed;
