--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -275,6 +275,27 @@ tr:nth-of-type(2n) {
     background-color: rgba(255, 255, 255, .5);
 }
 
+/* Styling the iframe */
+#game-changers {
+    position: relative;
+    overflow: hidden;
+    padding-top: 56.25%;
+    margin-bottom: 2rem;
+}
+
+#game-changers h2 {
+    align-items: center;
+}
+
+iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border: 0;
+}
+
 /* Footer */
 footer {
     position: fixed;
