--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -156,11 +156,13 @@ main {
     background-color: rgba(255, 255, 255, .8);
     border-radius: 3px;
     padding: 1rem;
+    margin-bottom: 2rem;
 }
 
 .nutrition-info h2 {
     font-size: 1.2rem;
     text-align: center;
+    margin-bottom: 1rem;
 }
 
 .nutrition-info h3 {
