make the movie header bigger for bigger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -407,6 +407,11 @@ footer {
             font-size: 120%;
         }
 
+                /* Movie section */
+                #movie>h2 {
+                    font-size: 130%;
+                }
+
     /* Footer*/
     #social-media {
         padding-left: 55%;
