--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -298,6 +298,20 @@ iframe {
     border: 0;
 }
 
+/* Styling the Join page */
+#join {
+    margin-bottom: 0;
+}
+
+#join-reason>h2 {
+    font-size: 140%;
+    margin-top: 1rem;
+}
+
+em {
+    font-weight: 600;
+}
+
 /* Footer */
 footer {
     position: fixed;
