--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,6 +312,26 @@ em {
     font-weight: 600;
 }
 
+/* Styling the Join form */
+#join-form {
+    margin: 1rem 0 6rem 0;
+}
+
+#join-form h2 {
+    font-size: 160%;
+}
+
+.text-input {
+    width: 100%;
+    height: 2rem;
+    background-color: rgba(255, 255, 255, .5);
+    border: 1px solid #cfbda9;
+    border-radius: 6px;
+    margin: .5rem 0;
+    /* To push the text from the left-right borders */
+    padding: 0 7px;
+}
+
 /* Footer */
 footer {
     position: fixed;
