--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -579,6 +579,18 @@ footer {
         margin: 5rem;
     }
 
+    /* Styling the JOIN page */
+    /* Join form */
+
+    #join-reason {
+        font-size: 130%;
+        display: block;
+        position: absolute;
+        left: 4%;
+        top: 18%;
+        width: 40%;
+    }
+
     /* Footer */
     #social-media {
         padding-left: 70%;
