move up the footer icons to the center, make the protein list's width shorter for bigger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -366,7 +366,7 @@ footer {
 }
 
 #social-media {
-    padding: 1rem 2rem;
+    padding: .7rem 2rem;
     display: flex;
     justify-content: space-between;
     list-style-type: none;
@@ -571,7 +571,8 @@ footer {
 
     /* To push the chart under the button */
     #bean-beef {
-        margin-top: 4rem;
+        margin: 4rem 15%;
+        width: 70%;
     }
 
     /* Reposition the button */
