add missing source for gladiator section, correct spellings

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,11 +178,11 @@ main {
     padding-bottom: 3rem;
 }
 
-.sourse {
+.source {
     font-size: .8rem;
 }
 
-.sourse>a {
+.source>a {
     color: #030202;
 }
 
