make the header for the movie bigger for bigger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -610,21 +610,19 @@ footer {
     }
 
     /* Making the iframe smaller */
-    #game-changers {
-        transform: scale(.5);
-        /* Scale the container up by 150% */
-        transform-origin: top left;
+    #movie>h2 {
+        font-size: 160%;
+        margin-top: 4%;
     }
 
-    /*
     iframe {
-        top: 3%;
+        top: 5%;
         left: 20%;
         bottom: 0;
         width: 60%;
         height: 60%;
     }
-*/
+
 
     /* Styling the JOIN page */
     /* Join form */
@@ -680,8 +678,4 @@ footer {
     #social-media {
         padding-left: 70%;
     }
-}
-
-#movie {
-    max-height: 450px;
 }
